# OmniAdaptor

./: .gitignore  README.md
omnihelper/: README.md  build.sh  flink_log_parser.py  main.py  pyproject.toml  spark_log_parser.py
omnihelper/constants/: __init__.py  flink_constants.py
omnihelper/docs/: release_notes.md
omnihelper/docs/en/: menu_installation_guide.md
omnihelper/docs/zh/: menu_installation_guide.md  release_notes.md
omnihelper/enum/: function_enum.py  spark_type_enum.py  type_enum.py
omnihelper/flink/: flink_request.py  op_parse.py
omnihelper/flink/function/: dictionary_loader.py  function_parse.py  pattern_matcher.py  support_checker.py
omnihelper/flink/operator/: excel_row_builder.py  function_analyzer.py  metrics_parser.py  op_parse.py  schema_chain_builder.py  utils.py
omnihelper/flink/schema/: constants.py  parser_utils.py  table_schema_reader.py  type_normalizer.py  (+1 more)
omnihelper/omnimv-spark-extension/: build.sh  pom.xml
omnihelper/parser/: expr_tree.py  function_builder.py  function_checker.py  function_parser.py  op_parser.py  type_matcher.py
omnihelper/resources/: boostkit-omnimv-spark-3.4.3-1.2.0-aarch64.jar.bak  flink_function_dictionary.json  flink_function_return_type.json  flink_op_dictionary.json  flink_table_schema.csv  omni_function_dictionary.json  omni_op_dictionary.json  omni_opname_mapping_dictionary.json  return_type_dictionary.json  spark_table_schema.csv
omnihelper/tests/: test_flink_log_parser.py  test_main.py
omnihelper/util/: common_util.py  excel_util.py  flink_excel_util.py  func_util.py  log.py
(+94 files in other folders)
