[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnihelper"
version = "0.1.0"
description = "Big data operator scanning command line tool."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "tqdm==4.67.3",
    "numpy==2.0.2",
    "pandas==2.3.2",
    "openpyxl==3.1.5",
    "requests>=2.32,<2.33"
]

[project.optional-dependencies]
kerberos = [
    "requests-kerberos>=0.15,<0.16",
]
dev = [
    "pyinstaller==6.19.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
